--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,7 @@ Things you need:
   13. start solr: cd solr/examples; java -jar start.jar; check it: http://localhost:8988/solr
   14. rake solr_indexer:index_all_books
   15. rake eol_names:download_all_thumbs (make sure public/thumbs exists)
+  
+  
+== Common issues
+ - Make sure folder tmp/cache exists 
