--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,3 +35,5 @@ en:
   languages_link: "Languages"
   geographics_link: "Geographics"
   copyright_statement: "Copyright © Bibliotheca Alexandrina"
+  about_us_page_header: "About Us"
+  contact_us_page_header: "Contact Us"
