--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -55,4 +55,4 @@ en:
     other: "Containing %{count} scientific names" 
   around_the_world: "Around the world"
   tagged_species_caps: "TAGGED SPECIES"
-  
+  languages_caps: "LANGUAGES"
