--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,3 +56,5 @@ en:
   around_the_world: "Around the world"
   tagged_species_caps: "TAGGED SPECIES"
   languages_caps: "LANGUAGES"
+  authors_caps: "AUTHORS"
+  
