--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,7 +57,9 @@ en:
   tagged_species_caps: "TAGGED SPECIES"
   languages_caps: "LANGUAGES"
   authors_caps: "AUTHORS"
-
+  regional_affiliation_caps: "REGIONAL AFFILIATION"
+  genre_caps: "GENRE"
+    
   brief: 'Brief'
   mods: 'MODS'
   bibtex: 'BibTex'
@@ -69,3 +71,11 @@ en:
   book_publish_title: 'Publication info'
   book_language_title: 'Language'
   book_name_title: 'Tagged Species'
+
+  blue_pin: 'Blue Pin'
+  green_pin: 'Green Pin'
+  yellow_pin: 'Yellow Pin'
+  orange_pin: 'Orange Pin'
+  red_pin: 'Red Pin'
+  geo_titles: 'titles'
+  geo_titles_more: 'or more'
