--- a/README.rdoc
+++ b/README.rdoc
@@ -19,6 +19,7 @@ Things you need:
   7.  rake scenarios:load NAME=bootstrap # this scenario will fill the DB with 100 books with only BIBIDs
   8.  rake dar:update_all_metadata # this will download all metadata for books from DAR
   9.  rake bhl:update_empty_locations # to update locations/countries
+  	  Then you should remove duplicate locations (rake bhl:remove_duplicate_locations)
   10. rake dar:download_volume_content (make sure folder public/volumes exists)
   11. rake dar:download_thumbs
   12. perl taxon_finder/server.pl
