--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -83,4 +83,5 @@ en:
   browse_subject_page_header: 'Subjects'
   browse_author_page_header: 'Authors'
   browse_all: 'ALL'
+  tree_of_life_title: 'Tree of Life'
   
