--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -64,13 +64,15 @@ en:
   mods: 'MODS'
   bibtex: 'BibTex'
   endnote: 'EndNote'
+  book_title_title: 'Title'
   book_author_title: 'Author/Creator'
-  book_location_title: 'Publish Place'
+  book_publish_place_title: 'Publish Place'
   book_subject_title: 'Genre'
   book_date_title: 'Date'
   book_publish_title: 'Publication info'
   book_language_title: 'Language'
   book_name_title: 'Tagged Species'
+  book_location_title: 'Regional Affiliation'
   blue_pin: 'Blue Pin'
   green_pin: 'Green Pin'
   yellow_pin: 'Yellow Pin'
@@ -82,3 +84,5 @@ en:
   browse_subject_page_header: 'Subjects'
   browse_author_page_header: 'Authors'
   browse_all: 'ALL'
+  list_view: 'List View'
+  gallery_view: 'Gallery View'
