--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -291,3 +291,9 @@ en:
   cancel: "Cancel"
   add_to_collection: "Add book to collection "
   add_book_dialog_title: "Add book to my collection"
+  book_removed: "Book is removed"
+  remove_book_from_history_confirm: "Are you sure you want to delete this book ?"
+  book_added_to_collection: "Book is successfully added to your collection"
+  successfully_added: "Successfully added"
+  ok: "Ok"
+
