--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -297,6 +297,8 @@ en:
   can_not_delete_comment: "You can't delete comment that has a reply"
   marked_as_abuse: "Marked as abuse"
   collection_rate: "Collection rate"
+  rates: Rates
+  viewed: Viewed
   
   #------------------------------------------------#NEW_LAYOUT-----------------------------------------------------------------
   #Header
