--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -299,6 +299,7 @@ en:
   collection_rate: "Collection rate"
   rates: Rates
   viewed: Viewed
+  sort_by:Sort by
   
   #------------------------------------------------#NEW_LAYOUT-----------------------------------------------------------------
   #Header
