--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -355,12 +355,17 @@ en:
   book_details_tools: Tools
   book_details_read: Read
   book_details_details: Details
+  book_details_average_rate: Average Rate
+  book_details_user_rate: Your Rate
+  book_details_star: star
+  books_details_pleaselogintorate: Please Sign in to be able to rate
   books_details_add_collection: Add to Collection
   book_details_one_collection: Collection
   book_details_collections: Collections
   book_already_exists_in_collection: Book is already exists in this collection
   book_details_found_collections: Found in Collections
-  book_details_found_user_viewed: User also Viewed 
+  book_details_user_viewed: User also Viewed
+  book_details_related: Related Books 
   book_title_title: 'Title'
   book_author_title: 'Author/Creator'
   book_publish_place_title: 'Publish Place'
