sort books style

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -198,7 +198,7 @@ en:
   collections_link: Collections
   sender: Name
   message_subject: Subject
-  text: Text
+  text: Message
   contact_us_message: Thank you for your message
   sort_by_rating: Sort By Rating
   
