--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -126,7 +126,7 @@ en:
   mark: Report as inappropriate
   edit: Edit
   delete: Delete
-  comment_created: You just create a comment
+  comment_created: Thanks for your comment
   comment_created_error: Error ocuured while creating new comment
   hidden_comment_msg: This comment was hidden as it may contains inappropriate content
   errors:
@@ -278,8 +278,8 @@ en:
   ok: "Ok"
   your_rate: "Your rate"
   book_rate: "Book rate"
-  comment_deleted: "Comment is already deleted"
-  reply_deleted: "Reply is already deleted"
+  comment_deleted: "Comment deleted"
+  reply_deleted: "Reply deleted"
   can_not_delete_comment: "You can't delete comment that has a reply"
   marked_as_abuse: "Marked as abuse"
   collection_rate: "Collection rate"
