only 11 failures in pages_controller because of tabe named email_messages that is not found, pending specs should just be adjusted to fit the new layout that currently  is not ready yet

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -322,6 +322,7 @@ en:
   listresult_names: "Names:" 
   terminator: "."
   separator: "/"
+  and_more: " and %{count} more..."
   
   #Pages (About US, Contact Us)
   about_us_page_title: About Us
