--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -346,8 +346,9 @@ en:
   book_details_star: star
   books_details_pleaselogintorate: Please Sign in to be able to rate
   books_details_add_collection: Add to Collection
-  book_details_one_collection: Collection
-  book_details_collections: Collections
+  book_details_collection_count:
+    one:   "Collections"
+    other: "Collections"
   book_already_exists_in_collection: Book is already exists in this collection
   book_details_found_collections: Found in Collections
   book_details_user_viewed: User also Viewed
