--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -160,7 +160,7 @@ en:
   delete_saved_query_confirm: Are you sure you want to delete this query?
   delete_collection_confirm: Are you sure you want to delete this collection?
   delete_book_from_collection_confirm: Are you sure you want to delete this book from collection?
-  edit_collection: Edit Collection
+  
   public: Public
   private: Private
   collection_not_updated: Error Occured While Updating Collection
@@ -201,7 +201,7 @@ en:
           other: "%{count} validation errors found"
         body: "The following fields failed validation:"
       messages:
-        taken: "has already been taken"
+        taken: "has already beedit_collection_page_title: Edit Collectionen taken"
         record_invalid: "Validation failed: %{errors}"
         invalid: "is invalid"
         confirmation: "doesn't match confirmation"
@@ -410,3 +410,12 @@ en:
   col_book_trash: Trash
   col_book_move_up: Move Up
   col_book_move_down: Move Down
+  edit_collection: Edit
+  write_review: Write a review
+  please_login: please login
+  
+  #edit collection
+  public_collection: Public
+  edit_collection_page_title: Edit Collection
+  collection_help_block: max size for photo is 2 MB.
+  upload_collection_photo: Upload Photo 
