--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -173,6 +173,7 @@ en:
   contact_us_message: Thank you for your message
   sort_by_rating: Sort By Rating
   contact_us_title: Contact Us
+  invalid_email_address: Invalid Email Address
   
   notifier:
     user_verification:
