--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -158,7 +158,6 @@ en:
   collection_updated: Collection Updated
   results: Results
   delete_saved_query_confirm: Are you sure you want to delete this query?
-  delete_collection_confirm: Are you sure you want to delete this collection?
   delete_book_from_collection_confirm: Are you sure you want to delete this book from collection?
   
   public: Public
@@ -243,7 +242,7 @@ en:
   add_to_collection: "Add book to collection "
   add_book_dialog_title: "Add book to my collection"
   book_removed: "Book is removed"
-  remove_book_from_history_confirm: "Are you sure you want to delete this book ?"
+  
   book_added_to_collection: "Book is successfully added to your collection"
   successfully_added: "Successfully added"
   ok: "Ok"
@@ -327,13 +326,6 @@ en:
   #Pages (About US, Contact Us)
   about_us_page_title: About Us
   contact_us_page_title: Contact Us
-  
-  #Log Page
-  log_activity_create: created a new collection
-  log_activity_with: with
-  log_activity_rate: rated
-  log_activity_comment: commented on 
-  user_activity: User Activity
   
   #Book Details Page
   book_details_mods: MODs
@@ -419,3 +411,33 @@ en:
   edit_collection_page_title: Edit Collection
   collection_help_block: max size for photo is 2 MB.
   upload_collection_photo: Upload Photo 
+  
+  #User Profile Page
+  user_profile_tab: Profile
+  user_annotations_tab: Annotations
+  user_queries_tab: Saved Queries
+  user_history_tab: Recently Viewed Books
+  user_activity_tab: Activities
+  user_collections_tab: Collections
+  
+  #User Profile Page (Activity Tab)
+  user_activity_title: Activity Log
+  log_activity_create: created a new collection
+  log_activity_with: with
+  log_activity_rate: rated
+  log_activity_comment: commented on
+  log_activity_at: at
+  
+  #User Profile Page (Recently Viewed Tab)
+  user_history_title: Recently Viewed Books
+  user_history_viewed_on: "Viewed On:"
+  remove_book_from_history_confirm: "Are you sure you want to delete this book ?"
+  
+  #User Profile Page (Collections Tab)
+  user_collection_title: Collections
+  user_collection_added_on: "Added On:"
+  delete_collection_confirm: "Are you sure you want to delete this collection?"
+    
+  #User Profile Page (Annotation Tab)
+  user_annotation_title: Annotations
+  
