--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -462,6 +462,13 @@ en:
   home_activity_log: Activity Log
   no_activities: No Activities Found
   
+  #Activities Index Page
+  activities_index_title: Activities
+  activities_filter_by: "Filter By:"
+  activities_all: All
+  activities_rate: Rate
+  activities_comments: Comments
+  activities_collections: Collections
   # login page
   captcha_error: "There is a validation error on login verification element"
   empty_user_name_error: User name can't be empty
