--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -408,6 +408,8 @@ en:
   write_review: Write a review
   please_login: please login
   thanks_for_rating_collection: Thank you for rating this collection
+  volume_collection_deleted: Book is successfuly removed from your collection
+  remove_book_from_collection_confirm: "Are you sure you want to delete this book ?"
   
   #Edit collection page
   public_collection: Public
@@ -436,7 +438,7 @@ en:
   #User Profile Page (Recently Viewed Tab)
   user_history_title: Recently Viewed Books
   user_history_viewed_on: "Viewed On:"
-  remove_book_from_history_confirm: "Are you sure you want to delete this book ?"
+  remove_book_from_history_confirm: "Are you sure you want to remove this book ?"
   
   #User Profile Page (Collections Tab)
   user_collection_title: Collections
