redesigining search bars in homepage and browse all pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -324,6 +324,7 @@ en:
   terminator: "."
   separator: "/"
   and_more: " and %{count} more..."
+  clear: Clear
   
   #Pages (About US, Contact Us)
   about_us_page_title: About Us
