--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,12 +1,4 @@
 en:
-  about_us_page_1: "The New %{ba_link} is dedicated to recapture the spirit of openness and scholarship of the original Bibliotheca Alexandrina. Hence, it was keen to take part in the Global Biodiversity Heritage Library (BHL) project, as the project is regarded as a substantial enrichment to the BA's collection and simultaneously an optimum channel for sharing and propagating the Library's Arabic and non-Arabic biodiversity collection. This mutual collaboration comes in accordance with the BA's mission in availing knowledge to all, and furthers the inclusion and input of the Arabic-speaking countries."
-  about_us_page_2: "Accordingly, the BA has been pursuing the mirroring and replication of BHL since early 2011. Its participation in BHL project emerged inevitably in its course of being one of the main players in the internationalization, localization and mirroring of the Encyclopedia of Life, creating the EOL in Arabic. In this context, the scope of the BA's contribution in BHL project generally includes: setting the infrastructure for the mirroring and replication of the original BHL book collection, development of Local-BHL system, and adding biodiversity material from the BA's collection to comprise material from the Arab world in Arabic as well as other languages."
-  bhl_page_title: "Biodivestiry Heritage Library - Egypt"
-  bhl_short_title: "BHL Egypt"
-  ba_home_page_link: "http://www.bibalex.org/Home/Default_EN.aspx"
-  ba_name: "Bibliotheca Alexandrina (BA)"
-  bhl_site_name: "Biodivestiry Heritage Library - Egypt"
-
   books_count: 
     zero:  "No books"
     one:   "One book"
@@ -32,16 +24,6 @@ en:
   
   and_count_more: "and %{count} more"
   
-  books_found:
-    zero:  ""
-    one:   "Found in one book"
-    other: "Found in %{count} books"
-  books_found_all: "Found %{count} books"
-  
-  tree_of_life_title: 'Tree of Life'
-  species_details: 'Species Details'
-  
-  select_species_for_details: "Select species on the left to view the details"
   username: "Username"
   sign_up: "Sign up"
   submit_buton: "Submit"
@@ -101,7 +83,7 @@ en:
   public: Public
   private: Private
   collection_not_updated: Error Occured While Updating Collection
-  collections_link: Collections
+  
   contact_us_message: Thank you for your message
   contact_us_title: Contact Us
   invalid_email_address: Invalid Email Address
@@ -205,6 +187,17 @@ en:
   authors_link: Authors
   subjects_link: Subjects
   names_link: Names
+  collections_link: Collections
+  
+  bhl_page_title: "Biodivestiry Heritage Library - Egypt"
+  bhl_short_title: "BHL Egypt"
+  ba_home_page_link: "http://www.bibalex.org/Home/Default_EN.aspx"
+  ba_name: "Bibliotheca Alexandrina (BA)"
+  bhl_site_name: "Biodivestiry Heritage Library - Egypt"
+  
+  #About US Page
+  about_us_page_1: "The New %{ba_link} is dedicated to recapture the spirit of openness and scholarship of the original Bibliotheca Alexandrina. Hence, it was keen to take part in the Global Biodiversity Heritage Library (BHL) project, as the project is regarded as a substantial enrichment to the BA's collection and simultaneously an optimum channel for sharing and propagating the Library's Arabic and non-Arabic biodiversity collection. This mutual collaboration comes in accordance with the BA's mission in availing knowledge to all, and furthers the inclusion and input of the Arabic-speaking countries."
+  about_us_page_2: "Accordingly, the BA has been pursuing the mirroring and replication of BHL since early 2011. Its participation in BHL project emerged inevitably in its course of being one of the main players in the internationalization, localization and mirroring of the Encyclopedia of Life, creating the EOL in Arabic. In this context, the scope of the BA's contribution in BHL project generally includes: setting the infrastructure for the mirroring and replication of the original BHL book collection, development of Local-BHL system, and adding biodiversity material from the BA's collection to comprise material from the Arab world in Arabic as well as other languages."
   
   collections_link: Collections
   write_review: Write a review
@@ -217,7 +210,6 @@ en:
   abuse: Report
   create_comment: Create Comment
   show: Show
-  
   
   #Header#search fields
   option_all: All Categories
@@ -390,6 +382,7 @@ en:
   top_rated: Top Rated
   home_activity_log: Activity Log
   no_activities: No Activities Found
+  tabs_more: "more..."
   
   #Activities Index Page
   activities_index_title: Activities
@@ -398,13 +391,24 @@ en:
   activities_rate: Rate
   activities_comments: Comments
   activities_collections: Collections
+  
   # login page
   captcha_error: "There is a validation error on login verification element"
   empty_user_name_error: User name can't be empty
   empty_password_error: Password can't be empty
   empty_verfication_error: Please fill this
 
-  tabs_more: "more..."
-  
   #comments
   no_comments: No Comments ..
+  
+  #Names Index
+  books_found:
+    zero:  ""
+    one:   "Found in one book"
+    other: "Found in %{count} books"
+  books_found_all: "Found %{count} books"
+  
+  tree_of_life_title: Tree of Life
+  species_details: Species Details  
+  select_species_for_details: Select species on the left to view the details
+  
